--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel ="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel ="stylesheet" type="text/css" href="assets/css/styleContact.css">
     	<title>Josh's Contact Page</title>
     </head>
@@ -24,9 +25,6 @@
 		</h1>
 	</header>
 
-<hr>
-
-
 <div class = "siteBody">
 	<h2>
 		Contact Me
@@ -34,11 +32,22 @@
 	<hr>
 	<form>
 		<strong>
-	  		<form>
-	  			First name:<br> <input type="text" name="firstname" placeholder="Keyser"><br>
-	  			Last name:<br>  <input type="text" name="lastname" placeholder="Soze"> <br>
-	  			Email: <br> <input type="email" name="email" required placeholder="something@somewhere.com"> <br>
-	  			Message: <br> <input type="text" placeholder="Words words words words" class="message"><br>
+			First name:
+	  		<br> 
+	  		<input type="text" name="firstname" placeholder="Keyser" />
+	  		<br>
+	  			Last name:
+	  		<br>  
+	  		<input type="text" name="lastname" placeholder="Soze" /> 
+	  		<br>
+	  			Email:
+	  		<br> 
+	  		<input type="email" name="email" required placeholder="something@somewhere.com" /> 
+	  		<br>
+	  			Message: 
+	  		<br> 
+	  		<textarea rows="6" cols="40" placeholder="Words words words words" class="message"></textarea>
+	  		<br> 
 	  	</strong> 
 	  		<input type="submit">
 	</form>
@@ -57,12 +66,11 @@
 
 
 <footer>
-	<hr>
 	<p>
 		Copyright 2017 Josh Benloulou
 	</p>
 	<p>
-		Contact information: <a href="mailto:jbenloul@gmail.com">Email Me Here!</a>.
+		Contact information: <a href="mailto:jbenloul@gmail.com">Email Me Here!</a>
 	</p>
 </footer>
 
