--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel ="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel ="stylesheet" type="text/css" href="assets/css/styleIndex.css">
     	<title>Josh's Home Page</title>
     </head>
@@ -24,8 +25,6 @@
 			Josh Benloulou	
 		</h1>
 	</header>
-
-<hr>
 
 
 <!--
@@ -62,12 +61,11 @@ C:/Users/Josh/Desktop/CodingTools/Repositories/Basic-Portfolio/assets/images/pro
 </div>
 
 <footer>
-<hr>
 	<p>
 		Copyright 2017 Josh Benloulou
 	</p>
 	<p>
-		Contact information: <a href="mailto:jbenloul@gmail.com">Email Me Here!</a>.
+		Contact information: <a href="mailto:jbenloul@gmail.com">Email Me Here!</a>
 	</p>
 </footer>
 
