hopefully the final commit!

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 	<a>	<img src ="assets/images/Eye.png" id="Eye" alt="I" style="width:300px;height:300px;"/> </a>
 
 	<p class="donut">Don't</p>
-	<a>	<img src ="assets/images/donut.jpg" id="Donut" alt="Don't" style="width:300px;height:300px;"/> </a>
+	<a>	<img src ="assets/images/Donut.jpg" id="Donut" alt="Don't" style="width:300px;height:300px;"/> </a>
 
 	<p class="half">Have</p>
 	<a>	<img src ="assets/images/Half.jpeg" id="Half" alt="Have" style="width:300px;height:300px;"/> </a>
